--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,93 @@
 aiohappyeyeballs
 aiohttp
 aiosignal
-amqp==5.3.1
-annotated-types==0.7.0
-anyio==4.9.0
-asgiref==3.8.1
-attrs==25.3.0
-bcrypt==4.3.0
-billiard==4.2.1
-blinker==1.9.0
-cachetools==5.5.2
-celery==5.5.2
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-click-default-group==1.2.4
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-colorlogs==0.1
-cryptography==44.0.2
-distlib==0.3.9
-Django==5.2
-ecdsa==0.19.1
-facebook-sdk==3.1.0
-Faker==37.3.0
-fastapi==0.115.12
-filelock==3.18.0
-Flask==2.3.3
-Flask-Cors==4.0.0
-Flask-Login==0.6.3
-Flask-Script==2.0.6
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
-frozenlist==1.6.0
-google-auth==2.40.1
-google-genai==1.15.0
-greenlet==3.1.1
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-ipinfo==5.1.1
-itsdangerous==2.2.0
-Jinja2==3.1.3
-kombu==5.5.3
-MarkupSafe==3.0.2
-msgpack==1.1.0
-multidict==6.4.4
-orjson==3.10.16
-packaging==25.0
-passlib==1.7.4
-pillow==11.2.1
-pipenv==2025.0.2
-platformdirs==4.3.7
-pluggy==1.5.0
-prompt_toolkit==3.0.51
-propcache==0.3.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.3
-pydantic_core==2.33.1
-pyfiglet==1.0.2
-pynvim==0.5.2
-python-dateutil==2.9.0.post0
-python-jose==3.4.0
-pytz==2025.2
-pyzbar==0.1.9
-qrcode==8.2
-requests==2.32.3
-rsa==4.9
-setuptools==80.8.0
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.40
-sqlite-fts4==1.0.3
-sqlite-utils==3.38
-sqlparse==0.5.3
-starlette==0.46.1
-tabulate==0.9.0
-typing-inspection==0.4.0
-typing_extensions==4.13.0
-tzdata==2025.2
-urllib3==2.3.0
-uvicorn==0.34.0
-vine==5.1.0
-virtualenv==20.30.0
-wcwidth==0.2.13
-websockets==15.0.1
-Werkzeug==3.1.3
-WTForms==3.2.1
-yarl==1.20.0
+amqp
+annotated-types
+anyio
+asgiref
+attrs
+bcrypt
+billiard
+blinker
+cachetools
+celery
+cffi
+charset-normalizer
+click
+click-default-group
+click-didyoumean
+click-plugins
+click-repl
+colorama
+colorlogs
+cryptography
+distlib
+Django
+ecdsa
+facebook-sdk
+Faker
+fastapi
+filelock
+Flask
+Flask-Cors
+Flask-Login
+Flask-Script
+Flask-SQLAlchemy
+Flask-WTF
+frozenlist
+google-auth
+google-genai
+greenlet
+h11
+httpcore
+httpx
+idna==
+ipinfo
+itsdangerous
+Jinja2
+kombu
+MarkupSafe
+msgpack
+multidict
+orjson
+packaging
+passlib
+pillow
+pipenv
+platformdirs
+pluggy
+prompt_toolkit
+propcache
+pyasn1_modules
+pycparser
+pydantic
+pydantic_core
+pyfiglet
+pynvim
+python-dateutil
+python-jos
+pytz
+pyzbar
+qrcode
+requests
+rsa
+setuptools
+sniffio
+SQLAlchemy
+sqlite-fts4
+sqlite-utils
+sqlparse
+starlette
+tabulate
+typing-inspection
+typing_extensions
+tzdata
+urllib3
+uvicorn
+virtualenv
+wcwidth
+websockets
+Werkzeug
+WTForms
+yarl
+gunicorn
